--- a/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
+++ b/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8' ?>
-<Window x:Class="MU_Puzzle_OxyWPF2.StackedWindow"
+<Window x:Class="MU_Puzzle_OxyWPF2.StackedWindow" Background="SteelBlue"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="StackedWindow" HorizontalAlignment="Center" VerticalAlignment="Top" 
@@ -9,7 +9,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Background="Bisque">
+        <StackPanel Grid.Row="0" Background="LightGreen" >
+            <Label Content="The MU Puzzle" FontFamily="Times New Roman" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,10,0,10" />
 
             <Grid HorizontalAlignment="Center" Visibility="Collapsed" x:Name="SelectGrid" >
                 <Grid.ColumnDefinitions>
@@ -23,12 +24,12 @@
                 <Button x:Name="btnOK" Content="OK" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1" Click="btnOK_Click" />
                 <Button x:Name="btnCancel" Content="Cancel" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="2" Click="btnCancel_Click" />
                 <Button x:Name="btnNext" Content="Next" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="3" Click="btnNext_Click" />
-
             </Grid>
             <Label x:Name="lblSelect" Content="Select:" Visibility="Collapsed" FontStyle="Italic" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Center"/>
-            <Label Content="Current String:" HorizontalAlignment="Left" Margin="21,0,0,0" />
-            <Label x:Name="lblMuStr" Content="MI" Margin="21,5,21,0" Height="60" FontFamily="Lucida Console" FontSize="16" Background="Aquamarine"/>
-            <Label Content="Goal String:" HorizontalAlignment="Left" Margin="21,5,0,0" />
+
+            <Label Content="Current String:" FontFamily="Verdana" FontSize="16" HorizontalAlignment="Left" Margin="21,0,0,0" />
+            <Label x:Name="lblMuStr" Content="MI" Margin="21,5,21,0" Height="60" FontFamily="Lucida Console" FontSize="16" Background="LightCyan"/>
+            <Label Content="Goal String:" FontFamily="Verdana" FontSize="16" HorizontalAlignment="Left" Margin="21,5,0,0" />
             <Label Content="MU" HorizontalAlignment="Left" Margin="42,0,0,0" FontFamily="Lucida Console" FontSize="16"/>
 
             <Grid HorizontalAlignment="Center" Margin="0,10,0,10" >
@@ -56,6 +57,6 @@
 
         </StackPanel>
 
-        <ListBox x:Name="lbMuStrs" Margin="10,10,10,10" VerticalAlignment="Stretch" Grid.Row="1" MouseDoubleClick="lbMuStrs_MouseDoubleClick"/>
+        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="12" Margin="10,10,10,10" VerticalAlignment="Stretch" Grid.Row="1" MouseDoubleClick="lbMuStrs_MouseDoubleClick"/>
     </Grid>
 </Window>
