--- a/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
+++ b/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
@@ -9,8 +9,15 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Background="LightGreen" >
-            <Label Content="The MU Puzzle" FontFamily="Times New Roman" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,10,0,10" />
+        <StackPanel Grid.Row="0">
+            <StackPanel.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="Aqua" Offset="0.0" />
+                        <GradientStop Color="Blue" Offset="0.5" />
+                        <GradientStop Color="Navy" Offset="1.0" />
+                    </LinearGradientBrush>
+            </StackPanel.Background>
+            <Label Content="The MU Puzzle" FontFamily="Times New Roman" FontSize="20" Foreground="BlanchedAlmond" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,10,0,10" />
 
             <Grid HorizontalAlignment="Center" Visibility="Collapsed" x:Name="SelectGrid" >
                 <Grid.ColumnDefinitions>
@@ -44,10 +51,10 @@
                     <RowDefinition Height="30" />
                 </Grid.RowDefinitions>
 
-                <Label x:Name="lblRule1" Content="Add &quot;U&quot; if last letter is &quot;I&quot;" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Right" Grid.Column="0" Grid.Row="0"/>
-                <Label x:Name="lblRule2" Content="Add everything after &quot;M&quot; to the end" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Right" Grid.Column="3"  Grid.Row="0"/>
-                <Label x:Name="lblRule3" Content="Replace &quot;III&quot; with &quot;U&quot;" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="0"  Grid.Row="1"/>
-                <Label x:Name="lblRule4" Content="Delete an occurance of &quot;UU&quot;" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1"/>
+                <Label x:Name="lblRule1" Content="Add &quot;U&quot; if last letter is &quot;I&quot;" Foreground="Cornsilk" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Right" Grid.Column="0" Grid.Row="0"/>
+                <Label x:Name="lblRule2" Content="Add everything after &quot;M&quot; to the end" Foreground="Cornsilk" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Right" Grid.Column="3"  Grid.Row="0"/>
+                <Label x:Name="lblRule3" Content="Replace &quot;III&quot; with &quot;U&quot;" Foreground="Cornsilk" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="0"  Grid.Row="1"/>
+                <Label x:Name="lblRule4" Content="Delete an occurance of &quot;UU&quot;" Foreground="Cornsilk" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1"/>
 
                 <Button x:Name="btnRule1" Content="Rule 1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1"  Grid.Row="0" Click="btnRule1_Click"/>
                 <Button x:Name="btnRule2" Content="Rule 2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="75" Grid.Column="2"  Grid.Row="0" Click="btnRule2_Click" Margin="7.2,6,7.4,0"/>
@@ -57,6 +64,6 @@
 
         </StackPanel>
 
-        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="12" Margin="10,10,10,10" VerticalAlignment="Stretch" Grid.Row="1" MouseDoubleClick="lbMuStrs_MouseDoubleClick"/>
+        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="12" Background="MistyRose" Margin="10,10,10,10" VerticalAlignment="Stretch" Grid.Row="1" MouseDoubleClick="lbMuStrs_MouseDoubleClick"/>
     </Grid>
 </Window>
