--- a/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
+++ b/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
@@ -12,9 +12,9 @@
         <StackPanel Grid.Row="0">
             <StackPanel.Background>
                     <LinearGradientBrush>
-                        <GradientStop Color="Aqua" Offset="0.0" />
-                        <GradientStop Color="Blue" Offset="0.5" />
-                        <GradientStop Color="Navy" Offset="1.0" />
+                        <GradientStop Color="Yellow" Offset="0.0" />
+                        <GradientStop Color="Red" Offset="0.5" />
+                        <GradientStop Color="DarkOliveGreen" Offset="1.0" />
                     </LinearGradientBrush>
             </StackPanel.Background>
             <Label Content="The MU Puzzle" FontFamily="Times New Roman" FontSize="20" Foreground="BlanchedAlmond" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,10,0,10" />
@@ -57,7 +57,7 @@
                 <Label x:Name="lblRule4" Content="Delete an occurance of &quot;UU&quot;" Foreground="Cornsilk" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1"/>
 
                 <Button x:Name="btnRule1" Content="Rule 1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1"  Grid.Row="0" Click="btnRule1_Click"/>
-                <Button x:Name="btnRule2" Content="Rule 2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="75" Grid.Column="2"  Grid.Row="0" Click="btnRule2_Click" Margin="7.2,6,7.4,0"/>
+                <Button x:Name="btnRule2" Content="Rule 2" VerticalAlignment="Top" Width="75" Grid.Column="2"  Grid.Row="0" Click="btnRule2_Click" Margin="7.2,6,7.4,0" HorizontalAlignment="Center" Initialized="btnRule2_Initialized"/>
                 <Button x:Name="btnRule3" Content="Rule 3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1" Grid.Row="1"  Click="btnRule3_Click"/>
                 <Button x:Name="btnRule4" Content="Rule 4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="2"  Grid.Row="1"  Click="btnRule4_Click"/>
             </Grid>
