--- a/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
+++ b/oxy_wpf/MU_Puzzle_OxyWPF2/StackedWindow.xaml
@@ -2,7 +2,7 @@
 <Window x:Class="MU_Puzzle_OxyWPF2.StackedWindow" Background="SteelBlue"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="StackedWindow" HorizontalAlignment="Center" VerticalAlignment="Top" 
+    Title="MU Puzzle WPF2" HorizontalAlignment="Center" VerticalAlignment="Top" 
         Height="500" Width="600" MinWidth="600" MinHeight="400"  >
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10,5,10,0">
         <Grid.RowDefinitions>
@@ -56,10 +56,10 @@
                 <Label x:Name="lblRule3" Content="Replace &quot;III&quot; with &quot;U&quot;" Foreground="Cornsilk" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="0"  Grid.Row="1"/>
                 <Label x:Name="lblRule4" Content="Delete an occurance of &quot;UU&quot;" Foreground="Cornsilk" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1"/>
 
-                <Button x:Name="btnRule1" Content="Rule 1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1"  Grid.Row="0" Click="btnRule1_Click"/>
-                <Button x:Name="btnRule2" Content="Rule 2" VerticalAlignment="Top" Width="75" Grid.Column="2"  Grid.Row="0" Click="btnRule2_Click" Margin="7.2,6,7.4,0" HorizontalAlignment="Center" Initialized="btnRule2_Initialized"/>
-                <Button x:Name="btnRule3" Content="Rule 3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1" Grid.Row="1"  Click="btnRule3_Click"/>
-                <Button x:Name="btnRule4" Content="Rule 4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="2"  Grid.Row="1"  Click="btnRule4_Click"/>
+                <Button x:Name="btnRule1" Content="Rule 1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1" Grid.Row="0" Click="btnRule1_Click"/>
+                <Button x:Name="btnRule2" Content="Rule 2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="2" Grid.Row="0" Click="btnRule2_Click"/>
+                <Button x:Name="btnRule3" Content="Rule 3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="1" Grid.Row="1" Click="btnRule3_Click"/>
+                <Button x:Name="btnRule4" Content="Rule 4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Grid.Column="2" Grid.Row="1" Click="btnRule4_Click"/>
             </Grid>
 
         </StackPanel>
