--- a/oxy_wpf/MU_Puzzle_OxyWPF/MainWindow.xaml
+++ b/oxy_wpf/MU_Puzzle_OxyWPF/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MU_Puzzle_OxyWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="524.173" Width="525" MinWidth="700" MinHeight="400">
+        Title="MU Puzzle WPF1" Height="524.173" Width="525" MinWidth="700" MinHeight="400">
     <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,0,0,-3">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="161*"/>
