--- a/oxy_MultiPlatform/MU_PuzzleWPF/WindowsDesktop.xaml
+++ b/oxy_MultiPlatform/MU_PuzzleWPF/WindowsDesktop.xaml
@@ -2,6 +2,7 @@
 <Window x:Class="MU_PuzzleWPF.TWindowsDesktop"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:c="clr-namespace:MU_PuzzleWPF"
     Title="MU Puzzle for Windows Desktop" Name="MuWindow" HorizontalAlignment="Center" VerticalAlignment="Top" 
     Height="500" Width="600" MinWidth="600" MinHeight="400"
     >
@@ -29,7 +30,7 @@
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="Width" Value="75"/>
         </Style>
-        
+        <c:TLabeledValueConverter x:Key="LabeledValueConverter"/>
     </Window.Resources>
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10,5,10,0">
         <Grid.OpacityMask>
@@ -65,11 +66,14 @@
             </Grid>
             <Label x:Name="lblSelect" Content="Select:" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" FontStyle="Italic" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" Foreground="Gold"/>
 
-            <Label FontFamily="Ariel" FontSize="8" HorizontalAlignment="Right" Margin="0,0,0,0" Foreground="Bisque">
-                <Label.Content>
-                    <Binding ElementName="MuWindow" Path="ActualWidth" />
-                </Label.Content>
-            </Label>
+            <TextBlock FontFamily="Ariel" FontSize="8" HorizontalAlignment="Right" Margin="0,0,0,0" Foreground="Bisque">
+                <TextBlock.Text>
+                    <MultiBinding Converter="{StaticResource LabeledValueConverter}">
+                        <Binding Source="Width: " />
+                        <Binding ElementName="MuWindow" Path="ActualWidth" />
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
             <Label Content="Current String:" FontFamily="Verdana" FontSize="16" HorizontalAlignment="Left" Margin="21,0,0,0" Foreground="Azure" />
             <Label x:Name="lblTmpMuStr" Content="{Binding Path=SelectorString}" Margin="21,5,21,0" FontFamily="Lucida Console" FontSize="16" Background="PaleTurquoise" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" />
             <Label x:Name="lblMuStr"    Content="{Binding Path=MuString}" Margin="21,5,21,0" Height="60" FontFamily="Lucida Console" FontSize="16" Background="LightCyan"/>
@@ -101,8 +105,8 @@
 
             <TextBlock FontFamily="Ariel" FontSize="8" HorizontalAlignment="Right" Margin="0,0,0,0" Foreground="Bisque" >
                 <TextBlock.Text>
-                    <MultiBinding Converter="TMultiStringConverter">
-                        <Binding Source="test: " />
+                    <MultiBinding Converter="{StaticResource LabeledValueConverter}">
+                        <Binding Source="Height: " />
                         <Binding ElementName="MuWindow" Path="ActualHeight" />            
                     </MultiBinding>
                 </TextBlock.Text>
