--- a/oxy_MultiPlatform/MU_PuzzleWinPhone8/PhonePage.xaml
+++ b/oxy_MultiPlatform/MU_PuzzleWinPhone8/PhonePage.xaml
@@ -22,12 +22,12 @@
                 <Setter Property="HorizontalAlignment" Value="Center" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="Width" Value="105" />
-                <Setter Property="Height" Value="60" />
+                <Setter Property="Height" Value="90" />
                 <Setter Property="Background" Value="LightBlue" />
                 <Setter Property="Foreground" Value="Black" />
-                <Setter Property="FontSize" Value="16" />
+                <Setter Property="FontSize" Value="20" />
                 <Setter Property="BorderThickness" Value="1" />
-                <Setter Property="Margin" Value="0,0,0,0" />
+                <Setter Property="Margin" Value="0,5,0,5" />
             </Style>
             <Style x:Key="RuleLbl" TargetType="TextBlock">
                 <Setter Property="Foreground" Value="Cornsilk" />
@@ -115,7 +115,7 @@
 
             <TextBlock                      Text="Current String:"               Style="{StaticResource BigString}"  />
             <TextBlock x:Name="lblTmpMuStr" Text="{Binding Path=SelectorString}" Style="{StaticResource CodeText}" Margin="21,5,21,0" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" />
-            <TextBlock x:Name="lblMuStr"    Text="{Binding Path=MuString}"       Style="{StaticResource CodeText}" Margin="21,5,21,0" Height="60" />
+            <TextBlock x:Name="lblMuStr"    Text="{Binding Path=MuString}"       Style="{StaticResource CodeText}" Margin="42,5,21,0" Height="60" Foreground="Gold" TextWrapping="Wrap" TextTrimming="WordEllipsis" />
             <TextBlock                      Text="Goal String:"                  Style="{StaticResource BigString}"  />
             <TextBlock                      Text="MU"                            Style="{StaticResource CodeText}" Margin="42,0,0,0"  HorizontalAlignment="Left" Foreground="Gold"/>
 
@@ -125,10 +125,10 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="45" />
-                    <RowDefinition Height="45" />
-                    <RowDefinition Height="45" />
-                    <RowDefinition Height="45" />
+                    <RowDefinition Height="65" />
+                    <RowDefinition Height="65" />
+                    <RowDefinition Height="65" />
+                    <RowDefinition Height="65" />
                 </Grid.RowDefinitions>
 
                 <TextBlock x:Name="lblRule1" Text="Add &quot;U&quot; if last letter is &quot;I&quot;" Style="{StaticResource ResourceKey=RuleLbl}" Grid.Column="1" Grid.Row="0"/>
@@ -145,8 +145,10 @@
 
         <TextBlock Text="History:" Style="{StaticResource BigString}" Grid.Row="1"  />
 
-        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="12" Background="MistyRose" Foreground="Navy" Margin="20,0,20,10" VerticalAlignment="Stretch" Grid.Row="2" />
-        
+        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="20" 
+                 Background="MistyRose" Foreground="Navy" Margin="20,0,20,10" 
+                 VerticalAlignment="Stretch" Grid.Row="2"
+                 MouseEnter="HistoryMouseEnter" />
     </Grid>
 
 </phone:PhoneApplicationPage>
