--- a/oxy_MultiPlatform/MU_PuzzleWinPhone8/PhonePage.xaml
+++ b/oxy_MultiPlatform/MU_PuzzleWinPhone8/PhonePage.xaml
@@ -58,9 +58,7 @@
             </Style>
             <DataTemplate x:Key="HistoryItem">
                 <TextBlock Text="{Binding}" 
-                               Foreground="DarkSlateBlue" 
-                               FontSize="20" 
-                               FontWeight="Bold" />
+                    FontSize="22" Margin="5"  />
             </DataTemplate>
             
         </Grid.Resources>
@@ -153,11 +151,13 @@
 
         <TextBlock Text="{Binding  Source={StaticResource LocalizedStrings}, Path=LocalizedResources.HistoryText}" Style="{StaticResource BigString}" Grid.Row="1"  />
 
-        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="20" 
-                 Background="MistyRose" Foreground="Navy" Margin="20,0,20,10" 
+        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" 
+                 Margin="20,0,20,10" BorderThickness="2" BorderBrush="Aqua"
                  VerticalAlignment="Stretch" Grid.Row="2"
                  MouseEnter="HistoryMouseEnter"
-                 SelectionMode="Single" ItemTemplate="{StaticResource HistoryItem}"/>
+                 SelectionMode="Single" 
+                 ItemTemplate="{StaticResource HistoryItem}"
+                 />
     </Grid>
 
 </phone:PhoneApplicationPage>
